src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail37.jova
class Test{
    public int func(String x, int y){

        return 20;
    }

    public int nestedIsland() {
        int var;
        var = func("blabla", 42);
        return 0;
    }

}